<resources>
    <string name="app_name">assign02</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="price_cad">Price (cad):</string>
    <string name="price_bitcoin">Price (bitcoin)</string>
    <string name="add_new_product">Add New Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
